@@ -3008,7 +3008,7 @@ uses
     uDownload,  FertAnalysisRpt, SaleEligibility, uAccsReps, { AnimalWaste, }
     uLiveStockValues, uCreateEvents,
     uQuotaMan, uPreSale, uHerdRec,
-    uGlobalSettings, uFeedAllocEdit, KRoutines,
+    uGlobalSettings, uFeedAllocEdit,
     uCrushDiskWeigh, uPedUpgradeReport, uHerdSelect, uMilkTankRead, KDBRoutines,
     uCMMSPermits, uBlade, { uPhoneLinkDownload, } uRationPerformMonitor,uUpdateAnimalNo,
     uAPHISRegistration, uDairyHerdHealthCert, SCCAnalysis, uPDAReportDefaults,
@@ -12676,6 +12676,12 @@ end;
 
 procedure TMenuForm.ShowRationCalc;
 begin
+   if ( not(Def.Definition.dUseRationCalc) ) then
+      begin
+         MessageDlg(cMissingModulePayMsg,mtInformation,[mbOK],0);
+         Exit;
+      end;
+
    WinData.CallProg.RationCalc;
 end;
 
@@ -16304,6 +16310,7 @@ begin
    //ProcessAimMovements;
    //ProcessAIMHerdReconcile();
    //TfmAIMHeifTempTransfers.SaveTempTransfers;
+   SetDefaultWebBrowser('Edge');
 end;
 
 procedure TMenuForm.actAddA1A2ResultExecute(Sender: TObject);
